--- a/resources/theme/mormont/assets/css/page.css
+++ b/resources/theme/mormont/assets/css/page.css
@@ -31,6 +31,10 @@ h4, h5, h6 {
   margin:0;
 }
 
+h4 b { 
+  color: #494949;
+}
+
 header h4{
   margin: 10 0 0 0px;
 }
@@ -219,6 +223,19 @@ header div.heading {
 {
   margin-top: 15px;
   margin-bottom: 0px;
+}
+
+.entry-description h4{
+  padding-top: 30px;
+  padding-bottom: 5px;
+}
+
+.entry-description p{
+  padding-top: 30px;
+}
+
+.entry-option{
+  display: none;
 }
 
 
